initialized an astro project to test my components

--- a/astro-react-app/src/components/layout/astro/Accordion.astro
+++ b/astro-react-app/src/components/layout/astro/Accordion.astro
@@ -6,7 +6,7 @@ const {
   accordionIcon = "arrow",
   class: className,
 } = Astro.props;
-const baseClass = "collapse bg-base-100 border border-base-300";
+const baseClass = "collapse bg-base-100 border border-base-300 rounded-md";
 const contentClass = "collapse-content text-sm";
 const labelClass = "collapse-title font-semibold";
 const globalClass = `${baseClass} ${accordionIcon === "arrow" ? "collapse-arrow" : "collapse-plus"} ${className || ""} `;
@@ -15,9 +15,9 @@ const globalClass = `${baseClass} ${accordionIcon === "arrow" ? "collapse-arrow"
 <div class={globalClass}>
   {
     initialOpen ? (
-      <input type="checkbox" name={accordionRadioName} checked />
+      <input type="radio" name={accordionRadioName} checked />
     ) : (
-      <input type="checkbox" name={accordionRadioName} />
+      <input type="radio" name={accordionRadioName} />
     )
   }
   <div class={labelClass}>{label}</div>
