--- a/astro-react-app/src/components/layout/astro/Collapse.astro
+++ b/astro-react-app/src/components/layout/astro/Collapse.astro
@@ -4,7 +4,7 @@ const {
   collapseIcon = "arrow",
   class: className,
 } = Astro.props;
-const baseClass = "collapse bg-base-100 border-base-300 border";
+const baseClass = "collapse bg-base-100 border-base-300 border rounded-sm";
 const contentClass = `collapse-content text-sm`;
 const labelClass = "collapse-title font-semibold";
 const globalClass = `${baseClass} ${collapseIcon === "arrow" ? "collapse-arrow" : "collapse-plus"} ${className || ""}`;
