--- a/astro-react-app/src/components/ui/astro/Anchor.astro
+++ b/astro-react-app/src/components/ui/astro/Anchor.astro
@@ -3,6 +3,7 @@ const {
   type = "link", // link or button
   variant = "primary",
   size = "medium",
+  underlineOnHover = false,
   outline = false,
   class: className,
   ...rest
@@ -38,14 +39,14 @@ const sizeMappingButton = {
   large: "btn-lg",
   extraLarge: "btn-xl",
 };
-const baseClass = `${type === "link" ? "link" : "btn"} inline-block`;
+const baseClass = `${type === "link" ? "link" : "btn inline-flex items-center"} inline-block`;
 const typeClass =
   type === "link"
-    ? `${variantMappingLink[variant] || ""}`
+    ? `${variantMappingLink[variant] || ""} ${underlineOnHover && "link-hover"}`
     : `${variantMappingButton[variant] || ""} ${sizeMappingButton[size] || ""} ${outline ? "btn-outline" : ""}`;
 const globalClass = `${baseClass} ${typeClass} ${className || ""}`;
 ---
 
-<a className={globalClass} {...rest}>
+<a class={globalClass} {...rest}>
   <slot />
 </a>
